#89: introduced TaskOption class for easier configuration of all task arguments (including JavadocTask)